--- a/Test02/Views/KeToan/DSCongnoNo.cshtml
+++ b/Test02/Views/KeToan/DSCongnoNo.cshtml
@@ -27,18 +27,35 @@
 
                     </ul>
                 </div>
-               
-                <div class="row" style="margin-top:20px">
+                <div class="btn-func" style="padding:10px;">
+                    <div class="row">
+                        
+                        <div class="col-sm-2">
+                            <a class="btn btn-info btn-sm" role="button" title="In" onclick="printDiv('printhere')">
+                                <i class="fas fa-print"></i> In dữ liệu
+                            </a>
+                        </div>
+                        <div class="col-sm-2">
+                            <a href="/KeToan/DSDaiLy" class="btn btn-warning btn-sm" type="button" title="Back">
+                                Quay lại danh sách
+                            </a>
+                        </div>
+
+                    </div>
+
+                </div>
+
+                <div class="row" id="printhere" >
                     <div class="col-sm-12">
                         <table class="table table-hover table-bordered js-copytextarea dataTable no-footer" cellpadding="0" cellspacing="0" border="0" id="sampleTable" role="grid" aria-describedby="sampleTable_info">
                             @*//Phần render từng dòng trong C#*@
                             <thead>
                                 <tr role="row">
                                     <th width="300" class="sorting" tabindex="0" aria-controls="sampleTable" style="width: 60px;">Mã CN</th>
-                                    <th class="sorting" tabindex="0" aria-controls="sampleTable"style="width: 150px;">Tên đại lý</th>
-                                    <th width="300" class="sorting" tabindex="0" aria-controls="sampleTable"style="width: 90px;">Mã Đại lý</th>
+                                    <th class="sorting" tabindex="0" aria-controls="sampleTable" style="width: 150px;">Tên đại lý</th>
+                                    <th width="300" class="sorting" tabindex="0" aria-controls="sampleTable" style="width: 90px;">Mã Đại lý</th>
                                     <th class="sorting" tabindex="0" aria-controls="sampleTable" style="width: 124px;">Tổng nợ</th>
-                                    <th class="sorting" tabindex="0" aria-controls="sampleTable"style="width: 124px;">Ngày tạo phiếu</th>
+                                    <th class="sorting" tabindex="0" aria-controls="sampleTable" style="width: 124px;">Ngày tạo phiếu</th>
                                     <th class="sorting" tabindex="0" aria-controls="sampleTable" style="width: 124px;">Hạn trả</th>
                                     <th class="sorting" tabindex="0" aria-controls="sampleTable" style="width: 150px;">Tình trạng</th>
                                     <th width="100" class="sorting" tabindex="0" aria-controls="sampleTable" style="width: 100px;">Chức năng</th>
@@ -61,7 +78,7 @@
                                         <td>
                                             @Html.DisplayFor(modelItem => item.MaDL)
                                         </td>
-                                       
+
 
                                         <td>
                                             @{ var Tienno = string.Format("{0:0,0 vnđ}", item.TienNo);}
@@ -101,29 +118,25 @@
             </div>
         </div>
 
-        <div class="btn-func">
-            <div class="row">
-                <div class="col-sm-2">
-                    <a class="btn btn-delete btn-sm print-file js-textareacopybtn" type="button" title="Sao chép" href="#"><i class="fas fa-copy"></i> Làm mới danh sách</a>
-                </div>
-                <div class="col-sm-2">
-                    <a class="btn btn-delete btn-sm print-file" type="button" title="In" onclick="myApp.printTable()">
-                        <i class="fas fa-print"></i> In dữ liệu
-                    </a>
-                </div>
-                <div class="col-sm-2">
-                    <a href="/KeToan/DSDaiLy" class="btn btn-warning btn-sm" type="button" title="Back">
-                        Quay lại danh sách
-                    </a>
-                </div>
-
-            </div>
-
-        </div>
+    
 
     </div>
 </div>
+<script>
+    function printDiv(divName) {
 
+        var printContents = document.getElementById(divName).innerHTML;
+        var originalContents = document.body.innerHTML;
+
+        document.body.innerHTML = printContents;
+
+        window.print();
+
+        document.body.innerHTML = originalContents;
+
+
+    }
+</script>
 
 
 
