--- a/Test02/Views/KeToan/XuatHDBH.cshtml
+++ b/Test02/Views/KeToan/XuatHDBH.cshtml
@@ -1,5 +1,4 @@
-﻿@model IEnumerable<Test02.Models.ChiTietDonHang>
-
+﻿@model Test02.Models.DonHang
 @using Test02.Models;
 @{
     ViewBag.Title = "XuatHDBH";
@@ -9,101 +8,68 @@
     QuanLyDLEntities2 db = new QuanLyDLEntities2();
     List<ChiTietDonHang> ct = db.ChiTietDonHangs.ToList();
 }
+<div class="container-sm">
+    <div class="row">
+        <div class="col-md-12">
+            <div class="tile" id="printMe">
 
-<div class="row">
-    <div class="col-md-12">
-        <div class="tile">
-            <div class="tile-body" id="hd">
+                @{
+                    DateTime ngay = (DateTime)(Model.NgayLap);
+                    int thang = ngay.Month;
 
-                <h3 style="text-align:center" >HÓA ĐƠN BÁN HÀNG</h3>
-                <div id="sampleTable_wrapper" class="dataTables_wrapper container-fluid dt-bootstrap4 no-footer">
+                    var daily = db.DaiLies.Where(s => s.MaDL == Model.MaDL).FirstOrDefault();
+                    var loaidaily = db.LoaiDLs.Where(s => s.MaLoaiDL == daily.MaLoaiDL).FirstOrDefault();
+                }
 
-                    @foreach (var item in Model)
-                    {
-
-                        <div>
-                            <p> <strong>Mã đơn hàng:</strong>@Html.DisplayFor(modelItem => item.MaDH)</p>
-                            <p>
-                                <strong>Ngày đặt:</strong>
-                                @{
-                                    var dh = db.DonHangs.Where(s => s.MaDH == item.MaDH).FirstOrDefault();
-                                   var ngay= String.Format("{0:d/M/yyyy}", dh.NgayLap);
-                                }
-                                @Html.DisplayFor(modelItem => ngay)
-                            </p>
-
-                        </div>
-                       
-                        <table>
-                            <tr>
-                                <th>THÔNG TIN</th>
-                                <th>ĐỊA CHỈ GIAO</th>
-                            </tr>
-                            <tr>
-                                <td>
-                                    Tên đại lý:
-                                    @{
-                                        var dl = db.DaiLies.Where(s => s.MaDL == dh.MaDL).FirstOrDefault();
-
-                                    }@Html.DisplayFor(modelItem => dl.TenDL)
-                                </td>
-                                <td rowspan="2">
-                                    @Html.DisplayFor(modelItem => dh.DiemGiao)
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    Điện thoại: @Html.DisplayFor(modelItem => dl.SDT)
-                                </td>
-
-                            </tr>
-                        </table>
-
-                        break;
-
-                    }
+                <div style="padding:20px">
+                    <div style="text-align:center">
+                        <h4>HÓA ĐƠN ĐƠN HÀNG</h4>
+                        <p> <strong>Ngày: </strong>@Html.DisplayFor(model => ngay)</p>
+                        <p> <strong>Mã đơn hàng: </strong>@Html.DisplayFor(model => model.MaDH)</p>
+                    </div>
 
 
-
-                    <div class="row" style="padding-top:10px">
+                    <p> <strong>Tên đại lý: </strong>@Html.DisplayFor(model => daily.TenDL)</p>
+                    <p> <strong>Loại đại lý: </strong>@Html.DisplayFor(model => loaidaily.MaLoaiDL)</p>
+                    <p> <strong>Địa chỉ: </strong>@Html.DisplayFor(model => daily.DiaChi)</p>
+                    <div class="row">
                         <div class="col-sm-12">
                             <table class="table table-hover table-bordered js-copytextarea dataTable no-footer" cellpadding="0" cellspacing="0" border="0" id="sampleTable" role="grid" aria-describedby="sampleTable_info">
                                 @*//Phần render từng dòng trong C#*@
                                 <thead>
                                     <tr role="row" style="text-align:center">
-                                        <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Mã sản phẩm: activate to sort column ascending" style="width: 100px;">Mã sản phẩm</th>
-                                        <th width="100" class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Tên sản phẩm: activate to sort column ascending" style="width: 100px;">Tên sản phẩm</th>
-                                        <th width="100" class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Số lượng: activate to sort column ascending" style="width: 100px;">Số lượng</th>
-                                        <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Đơn vị tính: activate to sort column ascending" style="width: 100px;">Đơn vị tính</th>
-                                        <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Đơn giá: activate to sort column ascending" style="width: 100px;">Đơn giá</th>
-                                        <th width="100" class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Thành tiền: activate to sort column ascending" style="width: 120px;">Thành tiền</th>
-
+                                        <th class="sorting" tabindex="0" aria-controls="sampleTable" style="width: 100px;">Mã CTDH</th>
+                                        <th width="100" class="sorting" tabindex="0" aria-controls="sampleTable" style="width: 100px;">Mã SP</th>
+                                        <th width="100" class="sorting" tabindex="0" aria-controls="sampleTable" style="width: 100px;">Tên sản phẩm</th>
+                                        <th width="100" class="sorting" tabindex="0" aria-controls="sampleTable" style="width: 100px;">Số lượng</th>
+                                        <th width="100" class="sorting" tabindex="0" aria-controls="sampleTable" style="width: 120px;">Thành tiền</th>
                                     </tr>
                                 </thead>
                                 <tbody>
                                     @{ var total = 0;
+                                        List<ChiTietDonHang> chiTietDonHangs = db.ChiTietDonHangs.Where(s => s.MaDH == Model.MaDH).ToList();
+
                                     }
-                                    @foreach (var item in Model)
+                                    @foreach (var item in chiTietDonHangs)
                                     {
                                         <tr>
+                                            <td>
+                                                @Html.DisplayFor(modelItem => item.MaCTDH)
+                                            </td>
 
                                             <td>
                                                 @Html.DisplayFor(modelItem => item.MaSP)
                                             </td>
+                                            @{
+                                                var sanpham = db.SanPhams.Where(sp => sp.MaSP == item.MaSP).FirstOrDefault();
+                                            }
                                             <td>
-                                                @{ var tensp = db.SanPhams.Where(s => s.MaSP == item.MaSP).FirstOrDefault();}
-                                                @Html.DisplayFor(modelItem => tensp.TenSP)
+                                                @Html.DisplayFor(modelItem => sanpham.TenSP)
                                             </td>
                                             <td>
                                                 @Html.DisplayFor(modelItem => item.SoLuong)
                                             </td>
-                                            <td>
-                                                @Html.DisplayFor(modelItem => tensp.DonViTinh)
-                                            </td>
-                                            <td>
-                                                @{ var chuyendoi = string.Format("{0:0,0 vnđ}", tensp.Gia);}
-                                                @Html.DisplayFor(modelItem => chuyendoi)
-                                            </td>
+
 
                                             <td>
                                                 @{ total += Convert.ToInt32(item.ThanhTien);}
@@ -111,37 +77,43 @@
                                                 @Html.DisplayFor(modelItem => ThanhTien)
 
                                             </td>
+
                                         </tr>
+
                                     }
                                     <tr>
-                                        <th colspan="5">Tổng cộng hóa đơn:</th>
+                                        <th colspan="4">Tổng cộng tiền nợ:</th>
                                         @{ var TongCong = string.Format("{0:0,0 vnđ}", total);}
                                         <td>@Html.DisplayFor(modelItem => TongCong)</td>
                                     </tr>
                             </table>
+
                         </div>
+
+                        <h5 style="margin-left:82%;padding-top:20px;" id="sample1">Kế toán</h5>
+                        <h6 style="margin-left:80%; font-style:italic;" id="sample1">(ký và ghi rõ họ tên)</h6>
+                        <br />
+                        <br />
+                        <br />
+
                     </div>
                 </div>
             </div>
-
         </div>
     </div>
-</div>
-<div class="row element-button" style="padding-left:10px">
-    <div class="col-sm-2">
-        <a class="btn btn-delete btn-sm print-file" title="In" onclick="myApp.printTable()">
-            <i class="fas fa-print"></i> In dữ liệu
-        </a>
-    </div>
-    <div class="col-sm-2">
-        @foreach (var item in Model)
-        {
-            var dh = db.DonHangs.Where(s => s.MaDH == item.MaDH).FirstOrDefault();
-            if (dh.TinhTrangThanhToan == "Chưa thanh toán")
+    <div class="row" style="padding-left:10px" id="btnin">
+        <div class="col-sm-2">
+            <a class="btn btn-delete btn-sm " title="In" onclick="printDiv('printMe')">
+                <i class="fas fa-print"></i> In dữ liệu
+            </a>
+        </div>
+        <div class="col-sm-2">
+
+            @if (Model.TinhTrangThanhToan == "Chưa thanh toán")
             {
                 <a class="btn btn-danger btn-sm" type="button" title="Quay lại " href="~/KeToan/QLDonHang">Quay lại</a>
             }
-            else if (dh.TinhTrangThanhToan == "Đang nợ")
+            else if (Model.TinhTrangThanhToan == "Đang nợ")
             {
                 <a class="btn btn-danger btn-sm" type="button" title="Quay lại " href="~/KeToan/QLDonNo">Quay lại</a>
             }
@@ -150,24 +122,30 @@
                 <a class="btn btn-danger btn-sm" type="button" title="Quay lại " href="~/KeToan/QLDonThanhToan">Quay lại</a>
             }
 
-        }
+
+
+        </div>
 
     </div>
-
 </div>
 
-<script>
-    //In dữ liệu
-    var myApp = new function () {
-        this.printTable = function () {
-            var tab = document.getElementById('hd');
 
-                var win = window.open('', '', 'height=800px,width=1200px');
-                win.document.write(tab.outerHTML);
-          
-            win.document.close();
-            win.print();
-        }
-        }
+<script>
+    function printDiv(divName) {
+      
+
+        var printContents = document.getElementById(divName).innerHTML;
+        var originalContents = document.body.innerHTML;
+
+        document.getElementById("btnin").style.display = "none";
+        
+
+        document.body.innerHTML = printContents;
+
+        window.print();
+
+        document.body.innerHTML = originalContents;
+    }
 </script>
+
 
